# depcheck

./: .editorconfig  .flake8  .gitignore  .gitlab-ci.yml  .pyre_configuration  .yamllint.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
depcheck/: __init__.py  depchecker.py  depchecker_test.py  main.py  models.py  readers.py  util.py  util_test.py
docs/: update-project-dependencies.md  upgrade-python-version.md
example/: .depcheck-ok.yml  .depcheck.yml  README.md  pyproject.toml
example/example/booking/: __init__.py  booking.py
example/example/commands/: __init__.py  placeorder.py
example/example/customer/: __init__.py  customer.py
example/example/customer/account/: account.py
example/example/payments/: __init__.py  functions.py
example/example/products/: __init__.py  inventory.py
example/example/products/prices/: __init__.py  catalog.py
example/root/: __init__.py  main.py
example/root/bar/: zoo.py
example/root/foo/: animals.py
example_project_directory/: pyproject.toml
example_project_directory/config/: customized_depcheck.yml
example_project_directory/root_package/: __init__.py  __main__.py
example_project_directory/root_package/package_1/: model.py
example_project_directory/root_package/package_2/: usecase.py
