[tool.poetry]
name = "depcheck"
version = "0.1.1"
authors = ["FlixMobility Tech <open-source@flixbus.com>"]
description = "Supports adopting a layered architecture in your Python application"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/flix-tech/depcheck"
repository = "https://github.com/flix-tech/depcheck"
documentation = "https://github.com/flix-tech/depcheck"
keywords = [
    "dependencies",
    "architecture",
    "jdepend",
    "deptrac"
]

[tool.poetry.dependencies]
python = "^3.6"
pydeps = "^1.9.13"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pyre-check = "^0.9.0"
flake8 = "^3.9.0"
yamllint = "^1.26.1"
coverage = "^5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
depcheck = 'depcheck.main:main'
