[tool.poetry]
name = "depcheck"
version = "0.1.1"
authors = ["FlixMobility Tech <open-source@flixbus.com>"]
description = "Supports adopting a layered architecture in your Python application"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/flix-tech/depcheck"
repository = "https://github.com/flix-tech/depcheck"
documentation = "https://github.com/flix-tech/depcheck"
keywords = [
    "dependencies",
    "architecture",
    "jdepend",
    "deptrac"
]

[tool.poetry.dependencies]
python = "^3.6"
pydeps = "^1.9.13"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pyre-check = "^0.9.0"
flake8 = "^3.9.0"
coverage = "^5.5"
black = {version = "^21.7b0", python = "^3.6.2"}
isort = {version = "^5.9.3", python = "^3.6.1"}

[tool.black]
line-length = 119

[tool.isort]
profile = "black"
line_length = 119

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
depcheck = 'depcheck.main:main'
