[tool.poetry]
name = "example_project_directory"
version = "0.1.0"
description = "Example Project"
authors = ["FlixMobility Tech <open-source@flixbus.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
